added CORS and load test data
